tests/core/snapshots/test-jq-template.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "token": "JWT_TOKEN"
    }
  }
}
