tests/core/snapshots/test-jq-template.md_5.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "var": [
        "spam",
        "eggs"
      ]
    }
  }
}
