tests/core/snapshots/test-jq-template.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  bar: [String!]!
}

type Buzz {
  first: String!
  second: String!
}

type Fizz {
  bar: String!
  buzz: Buzz!
}

type Foo {
  bar: [String!]!
}

type Query {
  bar: Bar!
  fizz: Fizz!
  foo: Foo!
  foobar: [String!]!
  token: String!
  var: [String!]!
}

schema {
  query: Query
}
