tests/core/snapshots/test-js-multi-onRequest-handlers.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": "its intercepted foo",
      "bar": "its intercepted bar"
    }
  }
}
