tests/core/snapshots/test-js-multi-onRequest-handlers.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  bar: String
  foo: String
}

schema {
  query: Query
}
