tests/core/snapshots/test-js-multi-onRequest-handlers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(onRequest: "foo") @link(src: "test1.js", type: Script) {
  query: Query
}

type Query {
  bar: String @http(onRequest: "bar", url: "http://localhost:3000/bar")
  foo: String @http(url: "http://localhost:3000/foo")
}
