tests/core/snapshots/test-js-multiple-scripts.md_error.snap
---
source: tests/core/spec.rs
expression: errors
snapshot_kind: text
---
[
  {
    "message": "Only one script link is allowed",
    "trace": [
      "schema",
      "@link"
    ],
    "description": null
  }
]
