tests/core/snapshots/test-js-request-reponse.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "hi": "hello world"
    }
  }
}
