tests/core/snapshots/test-js-request-response-2.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "hello": "darkness",
      "hi": "I've come to talk with you again"
    }
  }
}
